--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<p>
 		Hello, World!<br>
-		<a href= "https://mikamimochi.github.io/suprise/" style="color:black;">Show Me What You Got</a><br>
+		<a href= "https://mikamimochi.github.io" style="color:black;">Show Me What You Got</a><br>
 		<a href= "https://mikamimochi.github.io/wpc/index.html" style="color:black;">Personal Top 5</a><br>
 		<a href= "https://mikamimochi.github.io/food/" style="color:black;">Dinner Menu</a>
 	</p>
