--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<p>
 		Hello, World!<br>
 		<a href= "https://mikamimochi.github.io" style="color:black;">Show Me What You Got</a><br>
-		<a href= "https://mikamimochi.github.io/wpc/index.html" style="color:black;">Personal Top 5</a><br>
+		<a href= "https://mikamimochi.github.io/top5/" style="color:black;">Personal Top 5</a><br>
 		<a href= "https://mikamimochi.github.io/food/" style="color:black;">Dinner Menu</a>
 	</p>
 </body>
