--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<a href= "https://mikamimochi.github.io" style="color:black;">Show Me What You Got</a><br>
 		<a href= "https://mikamimochi.github.io/top5/" style="color:black;">Personal Top 5</a><br>
 		<a href= "https://mikamimochi.github.io/food/" style="color:black;">Dinner Menu</a><br>
-		<a href= "https://mikamimochi.github.io/sml/" style="color:black;">Small Medium Large</a>
+		<a href= "https://mikamimochi.github.io/sml/" style="color:black;">Small Medium Large</a><br>
 		<a href= "20fect/index.html" style="color:black;">20 Facts</a>
 	</p>
 </body>
