--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<a href= "https://mikamimochi.github.io/food/" style="color:black;">Dinner Menu</a><br>
 		<a href= "https://mikamimochi.github.io/sml/" style="color:black;">Small Medium Large</a><br>
 		<a href= "20fact/index.html" style="color:black;">20 Facts</a>
+		<a href= "doitagain/index.html" style="color:black;">Do It Again</a>
 	</p>
 </body>
 <style>
