--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<a href= "https://mikamimochi.github.io/top5/" style="color:black;">Personal Top 5</a><br>
 		<a href= "https://mikamimochi.github.io/food/" style="color:black;">Dinner Menu</a><br>
 		<a href= "https://mikamimochi.github.io/sml/" style="color:black;">Small Medium Large</a><br>
-		<a href= "20fact/index.html" style="color:black;">20 Facts</a>
+		<a href= "20fact/index.html" style="color:black;">20 Facts</a><br>
 		<a href= "doitagain/index.html" style="color:black;">Do It Again</a>
 	</p>
 </body>
