--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<a href= "https://mikamimochi.github.io" style="color:black;">Show Me What You Got</a><br>
 		<a href= "https://mikamimochi.github.io/top5/" style="color:black;">Personal Top 5</a><br>
 		<a href= "dinnermenu/index.html" style="color:black;">Dinner Menu</a><br>
-		<a href= "https://mikamimochi.github.io/sml/" style="color:black;">Small Medium Large</a><br>
+		<a href= "sml/index.html" style="color:black;">Small Medium Large</a><br>
 		<a href= "20fact/index.html" style="color:black;">20 Facts</a><br>
 		<a href= "doitagain/index.html" style="color:black;">Do It Again</a><br>
 		<a href= "SellYourAPI/index.html" style="color:black;">Do It Again</a>
