--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 	<p>
 		Hello, World!<br>
-		<a href= "https://mikamimochi.github.io" style="color:black;">Show Me What You Got</a><br>
-		<a href= "https://mikamimochi.github.io/top5/" style="color:black;">Personal Top 5</a><br>
+		<a href= "Showmewhatyougot/test1.html" style="color:black;">Show Me What You Got</a><br>
+		<a href= "top5/index.html" style="color:black;">Personal Top 5</a><br>
 		<a href= "dinnermenu/index.html" style="color:black;">Dinner Menu</a><br>
 		<a href= "sml/index.html" style="color:black;">Small Medium Large</a><br>
 		<a href= "20fact/index.html" style="color:black;">20 Facts</a><br>
