--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<a href= "sml/index.html" style="color:black;">Small Medium Large</a><br>
 		<a href= "20fact/index.html" style="color:black;">20 Facts</a><br>
 		<a href= "doitagain/index.html" style="color:black;">Do It Again</a><br>
-		<a href= "SellYourAPI/index.html" style="color:black;">Do It Again</a>
+		<a href= "SellYourAPI/index.html" style="color:black;">Sell Your API</a>
 	</p>
 </body>
 <style>
