--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<a href= "20fact/index.html" style="color:black;">20 Facts</a><br>
 		<a href= "doitagain/index.html" style="color:black;">Do It Again</a><br>
 		<a href= "SellYourAPI/index.html" style="color:black;">Sell Your API</a><br>
-		<a href= "Recipe/index.html" style="color:black;">Recipe</a>
+		<a href= "Recipe/index.html" style="color:black;">Recipe</a><br>
+		<a href= "uncommoncollections/index.html" style="color:black;">Uncommon Collections</a>
 	</p>
 </body>
 <style>
