--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<a href= "doitagain/index.html" style="color:black;">Do It Again</a><br>
 		<a href= "SellYourAPI/index.html" style="color:black;">Sell Your API</a><br>
 		<a href= "Recipe/index.html" style="color:black;">Recipe</a><br>
-		<a href= "uncommoncollections/index.html" style="color:black;">Uncommon Collections</a>
+		<a href= "uncommoncollections/index.html" style="color:black;">Uncommon Collections</a><br>
+		<a href= "casestudy/index.html" style="color:black;">Case Study</a>
 	</p>
 </body>
 <style>
